2019-01-21  Julien Bect  <julien.bect@centralesupelec.fr>

	stk_model.m: Internal changes

	* core/stk_model.m: Removed unused argument 'covariance_name' from
	subfunction stk_model_.

2019-01-18  Julien Bect  <julien.bect@centralesupelec.fr>

	stk_param_init.m: Call user-defined _param_init with correct nargout

	* param/estim/stk_param_init.m: Call user-defined _param_init
	function with the correct number of output arguments.

	stk_model.m: Be more flexible if stk_param_init fails

	* core/stk_model.m: Be more flexible and simply issue a warning if
	we fail to get a default parameter vector from stk_param_init.
	Also, do not rely on stk_param_init to get a default value for
	lnv.

2019-01-17  Julien Bect  <julien.bect@centralesupelec.fr>

	Make it possible to use stk_model with user-defined covariances.

	* param/estim/stk_param_init.m: When used with only one input
	argument, stk_param_init now returns defaults param and lnv values
	to be used by stk_model.
	* core/stk_model.m: Rely on stk_param_init to obtain default
	values for param and lnv.  User-defined covariance should do this
	as well.

2018-11-30  Julien Bect  <julien.bect@centralesupelec.fr>

	Relocate @struct/ inside model/prior_struct (ticket #90)

	* core/@struct/get_input_data.m: Moved from.
	* core/@struct/get_output_data.m: Moved from.
	* core/@struct/get_prior_model.m: Moved from.
	* model/prior_struct/@struct/get_input_data.m: Moved to.
	* model/prior_struct/@struct/get_output_data.m: Moved to.
	* model/prior_struct/@struct/get_prior_model.m: Moved to.
	* model/prior_struct/@struct/README: Provide an explanation.
	* admin/build_tools/build_octpkg.m: Ignore the README file.

	Move stk_get_optimizable_noise_parameters.m out of @struct/

	* core/@struct/stk_get_optimizable_noise_parameters.m: Moved from.
	* model/prior_struct/stk_get_optimizable_noise_parameters.m: Moved
	to. Check that model is a prior model structure.
	* admin/octpkg/INDEX: Update the index.
